# hyperspectral-mae

./: .gitignore  .pre-commit-config.yaml  MIGRATION.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
archive/legacy/core/: __init__.py  cr.py  grid.py  renderer.py  srf.py
archive/legacy/eval_old/: metrics.py  reports.py
archive/legacy/io/: __init__.py  lab.py  loaders.py  satellite.py
archive/legacy/ml/: interfaces.py
archive/legacy/train_old/: ema.py  schedules.py
archive/legacy/usr/: rff.py
core/: basis.py  hashing.py  types.py
hsi_fm/: __init__.py
hsi_fm/configs/: config.yaml
hsi_fm/data/: __init__.py  datasets.py  emit.py  enmap.py  overhead.py  patches.py
hsi_fm/eval/: __init__.py  emit_min_eval.py  methane_mdl_eval.py
hsi_fm/model/: __init__.py  backbone.py  blocks.py  heads_gas.py  heads_lab.py  heads_solids.py  losses.py  patches.py  tokens.py
hsi_fm/physics/: __init__.py  renderer.py  rt.py  srf.py
hsi_fm/scripts/: evaluate.py  evaluate_emit_min.py  prepare_data.py  train.py
hsi_fm/teachers/: __init__.py  lwir_cmf_glrt.py  swir_ctmf_imap.py
hsi_fm/tests/: __init__.py  test_losses.py  test_overhead_loader.py  test_renderer.py  test_srf.py  test_srf_torch.py
hsi_fm/train/: __init__.py  ema.py  runner.py  scheduler.py  seed.py  stage_A_mae.py  stage_B_align.py  stage_C_heads.py
hsi_fm/utils/: dist.py
io/: field.py  manifests.py
ml/: __init__.py  model.py  render_torch.py
ml/losses/: band_likelihood.py  invariance.py  spectral_losses.py
tools/: repo_cleanup.py
train/: emulation.py  runner.py  seed.py
usr/: __init__.py  tokenizer.py
(+17 files in other folders)
